Fix: Root colors

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,12 +1,6 @@
 :root{
-  --red: #E52E4D;
-  --blue: #5429CC;
-  --green: #33CC95;
-  --blue-light: #6933FF;
-  --text-title: #363F5F;
-  --text-body: #969CB3;
-  --background: #f8f2f5;
-  --shape: #FFFFFF;
+  --main: #FFFFFF;
+  --background: #F2F2F2;
 }
 
 * {
@@ -27,6 +21,7 @@ html{
 }
 
 body{
+  background-color: var(--background);
   -webkit-font-smoothing: antialiased;
 }
 
