Feat: Card post and hover effect

--- a/src/components/PostContainer/style.scss
+++ b/src/components/PostContainer/style.scss
@@ -1,4 +1,7 @@
 #post-container {
-  width: 80%;
+  width: 50%;
   margin: 0 auto;
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  grid-gap: 1rem;
 }
