--- a/src/components/PostContainer/style.scss
+++ b/src/components/PostContainer/style.scss
@@ -1,9 +1,29 @@
 #post-container {
   width: 50%;
   margin: 0 auto;
-  background-color: red;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  gap: 1rem;
+  transform: translateX(.5rem);
   margin-bottom: 1rem;
+}
+
+@media screen and (min-width : 481px) and (max-width : 800px) {
+  #post-container {
+    width: 90%;
+  }
+}
+
+@media screen and (min-width : 320px) and (max-width : 480px) {
+    #post-container {
+      width: 90%;
+    }
+  }
+
+@media screen and (min-width : 1px) and (max-width : 319px) {
+  #post-container {
+    width: 90%;
+    margin: 0;
+    gap: 0;
+  }
 }
