--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,5 +1,11 @@
 :root{
+  --main: #FFFFFF;
+  --secondary-background: #fafafa;
+
+
+  --highlight-color: #F94099;
   --main-text-color: #FFFFFF;
+  --text-color: #1a1a1a;
 }
 
 * {
