Feat: add metrics cards and redirect path on click

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -5,6 +5,9 @@
   --highlight-color: #F94099;
   --main-text-color: #FFFFFF;
   --text-color: #1a1a1a;
+
+  --button-green: #40B25C;
+  --button-green-hover: #1C6C3E;
 }
 
 * {
